# faa

./: .gitignore  CLAUDE.md  FRONTEND_CONFIGURATION_SUMMARY.md  GETTING_STARTED.md  OPENSEARCH_MIGRATION.md  PROJECT_STRUCTURE.md  README.md  UV_MIGRATION_SUMMARY.md  docker-compose.yml
backend/: .env.example  README.md  claude_history,md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: state.py  workflow.py
backend/app/agents/nodes/: README.md  evaluation.py  query_formulation.py  resolution.py  search.py  trigger_detection.py
backend/app/api/v1/: conversations.py  evaluations.py  resolutions.py  websocket.py
backend/app/core/: __init__.py  vector_store.py
backend/app/schemas/: conversation.py  resolution.py
backend/app/utils/: logging.py  metrics.py
docker/: frontend.Dockerfile
docs/: FRONTEND_SETUP.md  OPENSEARCH_SETUP.md  SWAGGER_API.md  UV_SETUP.md
frontend/: .env.example  .env.local.example  README.md  next.config.js  package-lock.json  package.json
frontend/src/hooks/: useConversation.ts  useResolution.ts  useWebSocket.ts
scripts/: setup.sh
