[project]
name = "faa-backend"
version = "0.1.0"
description = "Fidelity Agent Assistant Backend"
authors = [
    {name = "Your Team", email = "team@fidelity.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Web Framework
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.9",
    "python-socketio>=5.11.1",

    # Agent Framework & LLM
    "langgraph>=0.2.28",
    "langchain>=0.2.16",
    "langchain-core>=0.2.38",
    "langchain-community>=0.2.16",
    "langchain-openai>=0.1.25",
    "langchain-aws>=0.1.17",

    # LLM Utilities
    "litellm>=1.44.22",
    "openai>=1.45.0",

    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",

    # Redis & Caching
    "redis>=5.0.8",
    "hiredis>=2.3.2",

    # Task Queue
    "celery>=5.4.0",

    # Vector Store & Embeddings
    "opensearch-py>=2.7.1",
    "requests-aws4auth>=1.3.1",
    "sentence-transformers>=3.1.1",

    # HTTP & Scraping
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.12.2",
    "lxml>=5.3.0",

    # Data Validation & Serialization
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",

    # Observability
    "langfuse>=2.51.4",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",

    # Security & Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "faker>=30.3.0",
    "factory-boy>=3.3.1",

    # Code Quality
    "black>=24.10.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",

    # Type Stubs
    "types-redis>=4.6.0.20241004",
    "types-python-dateutil>=2.9.0.20241003",

    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.39",

    # Debugging
    "ipython>=8.28.0",
    "ipdb>=0.13.13",

    # Load Testing
    "locust>=2.32.2",
]

audio = [
    # Audio Processing (Phase 3)
    "openai-whisper>=20231117",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "opensearch.*",
    "opensearchpy.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ >= .__main__.:",
    "if TYPE_CHECKING:",
]
